--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,8 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
 }
 
 .profile-image {
@@ -27,6 +29,20 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+}
+
+.items-left, .items-left ul{
+  display: flex;
+  align-items: center;
+  padding: 8px;
+  gap: 8px;
+}
+
+.items-right{
+  display: flex;
+  gap: 8px;
+  padding: 8px;
+  align-items: center;
 }
 
 button {
