--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -24,3 +24,24 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+body{
+  text-align: center;
+}
+
+.title{
+  margin-bottom: 32px;
+}
+
+.horizontal{
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.info{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 200px;
+}
