--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -9,6 +9,18 @@ html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-auto-columns: minmax(150px, 1fr);
+  grid-auto-rows: minmax(150px, 1fr);
+  grid-template-areas:
+  'header header header header header'
+  'sidebar nav nav nav nav'
+  'sidebar article article article article'
+  'sidebar article article article article'
+  'sidebar article article article article'
+  'sidebar article article article article'
+  'footer footer footer footer footer';
+  gap: 16px;
 }
 
 .container div {
@@ -22,22 +34,27 @@ html {
 
 .header {
   background-color: #006157;
+  grid-area: header;
 }
 
 .sidebar {
   background-color: #005B94;
+  grid-area: sidebar;
 }
 
 .nav {
   background-color: #642cde;
+  grid-area: nav;
 }
 
 .article {
   background-color: #7E1DC3;
+  grid-area: article;
 }
 
 .footer {
   background-color: #393f4d;
+  grid-area: footer;
 }
 
 .article p {
