--- a/grid/02-grid-layout-2/style.css
+++ b/grid/02-grid-layout-2/style.css
@@ -9,6 +9,15 @@ html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-template-columns: minmax(150px, 1fr) minmax(450px, 3fr);
+  grid-template-rows: minmax(150px, 1fr) minmax(150px, 1fr) minmax(750px, 5fr) minmax(150px, 1fr);
+  grid-template-areas:
+  'header header'
+  'sidebar nav'
+  'sidebar article'
+  'footer footer';
+  gap: 16px;
 }
 
 .container div {
@@ -22,20 +31,27 @@ html {
 
 .header {
   background-color: #006157;
-  grid-column: 1 / 3;
+  grid-area: header;
 }
 
 .sidebar {
   background-color: #005B94;
-  grid-row: 2 / 4;
+  grid-area: sidebar;
 }
 
 .nav {
   background-color: #642cde;
+  grid-area: nav;
 }
 
 .article {
   background-color: #7E1DC3;
+  grid-area: article;
+}
+
+.footer {
+  background-color: #393f4d;
+  grid-area: footer;
 }
 
 .article p {
@@ -43,9 +59,4 @@ html {
   font-family: sans-serif;
   color: white;
   text-align: left;
-}
-
-.footer {
-  background-color: #393f4d;
-  grid-column: 1 / 3;
 }
