--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -89,3 +89,67 @@
   font-size: 13px;
   font-weight: normal;
 }
+
+/* Solution */
+
+.container{
+  display: grid;
+  grid-template-rows: minmax(200px, 2fr) minmax(100px, 1fr) minmax(800px, 8fr) minmax(100px, 1fr);
+  grid-template-columns: minmax(200px, 1fr) minmax(800px, 4fr);
+  grid-template-areas: 
+  'header header'
+  'sidebar nav'
+  'sidebar article'
+  'footer footer';
+  gap: 4px;
+}
+
+.header{
+  grid-area: header;
+  display: grid;
+  grid-template-columns: minmax(200px, 1fr) minmax(800px, 4fr);
+  align-items: center;
+}
+
+.sidebar{
+  grid-area: sidebar;
+  display: grid;
+  gap: 50px;
+}
+
+.sidebar > *{
+  display: grid;
+  align-items: center;
+}
+
+.nav{
+  grid-area: nav;
+  display: grid;
+  align-items: center;
+}
+
+.article{
+  grid-area: article;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-auto-rows: 200px;
+  gap: 16px;
+}
+
+.footer{
+  grid-area: footer;
+  display: grid;
+  align-items: center;
+}
+
+.menu ul{
+  display: grid;
+  list-style: none;
+  grid-template-columns: repeat(4, minmax(200px, 1fr));
+}
+
+.nav ul{
+  display: grid;
+  list-style: none;
+  grid-template-columns: repeat(3, minmax(200px, 1fr));
+}
